docs/versions/4.21/groups/M15.md
---
layout: group
group_id: M15
version: "4.21"
---

> **Remediation required.** This group (5 checks) fails on vanilla RHCOS 9.8 and requires MachineConfig remediation. Verified on cnfdt16 (OCP 4.22, RHCOS 9.8) with compliance-operator v1.8.2.

## Overview

Audits file deletion operations to track when files are removed from the system. Covers `rename`, `renameat`, `rmdir`, `unlink`, and `unlinkat` syscalls.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `file-deletion-events-rename` | Audit file rename operations |
| `file-deletion-events-renameat` | Audit file renameat operations |
| `file-deletion-events-rmdir` | Audit directory removal |
| `file-deletion-events-unlink` | Audit file unlink (delete) |
| `file-deletion-events-unlinkat` | Audit file unlinkat operations |

## Verification

```bash
oc debug node/<node> -- chroot /host auditctl -l | grep -E 'rename|rmdir|unlink'
```
