docs/versions/4.22/groups/M15.md
---
layout: group
group_id: M15
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Audits file deletion operations to track when files are removed from the system. Covers `rename`, `renameat`, `rmdir`, `unlink`, and `unlinkat` syscalls.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `file-deletion-events-rename` | Audit file rename operations |
| `file-deletion-events-renameat` | Audit file renameat operations |
| `file-deletion-events-rmdir` | Audit directory removal |
| `file-deletion-events-unlink` | Audit file unlink (delete) |
| `file-deletion-events-unlinkat` | Audit file unlinkat operations |

## Verification

```bash
oc debug node/<node> -- chroot /host auditctl -l | grep -E 'rename|rmdir|unlink'
```
